--- a/e-academy/src/index.css
+++ b/e-academy/src/index.css
@@ -6,3 +6,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+a {
+  text-decoration: none !important;
+}
+
+/* p,
+div,
+a {
+  color: red !important;
+} */
+body{
+  background-color: red !important;
+}
