--- a/e-academy/src/App.css
+++ b/e-academy/src/App.css
@@ -26,6 +26,7 @@ nav.navbar.navbar-light {
 .dropdown-item {
     font-size: 18px;
 }
+
 .dropdown-menu.show {
     z-index: 9999;
 }
@@ -34,6 +35,25 @@ nav.navbar.navbar-light {
 .dropdown-item:active {
     background-color: var(--primary) !important;
     color: var(--accent) !important;
+}
+
+/* Hero  */
+.ea-hero {
+    background-color: #fef8ef;
+    overflow: hidden;
+}
+
+.hero-textarea {
+    z-index: 9;
+    position: relative;
+}
+
+.hero-textarea p {
+    font-size: 18px;
+}
+
+.hero-img-area {
+    margin-left: -270px;
 }
 
 /* Mini Hero  */
@@ -45,6 +65,15 @@ nav.navbar.navbar-light {
 .course-card-footer.card-footer {
     background-color: var(--primary) !important;
     color: var(--gray) !important;
+}
+
+/* services */
+.section-title {
+    text-align: center;
+    max-width: 520px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 55px;
 }
 
 
@@ -85,8 +114,8 @@ nav.navbar.navbar-light {
 .sidebar-list.active {
     background: var(--primary);
     color:
-    
-    var(--gray);
+
+        var(--gray);
 }
 
 /* blog */
